--- a/odin-recipes/styles.css
+++ b/odin-recipes/styles.css
@@ -1,3 +1,29 @@
 h1 {
-    
+    margin: 0;
+    text-align: center;
+    color: chocolate;
+    background-color: bisque;
+    padding: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.image {
+    margin: 0;
+    display: block;
+    margin: auto;
+    width: 60%;
+    padding-bottom: 30px;
+}
+
+.image-container {
+    margin: 0;
+    background-color: bisque;
+}
+
+.steps {
+    margin-left: 30px;
+}
+
+.main-list {
+    list-style: none;
 }
