--- a/03-css-exercises_flex/04-flex-information/style.css
+++ b/03-css-exercises_flex/04-flex-information/style.css
@@ -5,12 +5,37 @@ body {
 img {
   width: 100px;
   height: 100px;
+  align-self: center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 24px;
 }
+
+.overall-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.img-text-group {
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+  max-width: 200px;
+} 
+
+.text {
+  text-align: center;
+}
+
 
 /* do not edit this footer */
 .footer {
