--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -148,3 +148,21 @@ a {
     align-self: end;
     padding-right: 32px;
 }
+
+.call-action-box {
+    margin: 100px 200px;
+    padding: 50px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 12px;
+}
+
+.call-text {
+    font-weight: 700;
+}
+
+.call-button {
+    border: 2px solid #f9faf8;
+}
