--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -166,3 +166,10 @@ a {
 .call-button {
     border: 2px solid #f9faf8;
 }
+
+.footer {
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0px;
+}
